--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Andrei Okounkov (October 22-24)
 
 <TABLE BORDER="0" CELLSPACING="1" CELLPADDING="1">
 <TR>
-
+kid.jpg
 <TD> 
 <FONT FACE="arial,helvetica" COLOR="orange" >
 <h3>
