--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Papers
 </a>
 
 <p>
-<a href="http://www.maagc.info/philadelphia-2015">
+<a href="http://www.maagc.info/virginia-2020">
 <FONT COLOR="orange">
 Mid-Atlantic Algebraic Geometry and Combinatorics Conference
 </a>
