--- a/index.html
+++ b/index.html
@@ -1,4 +1,51 @@
 
+<head><meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="files/new_style.css">
+  <script type="text/javascript" src= "files/jquery-3.3.1.min.js"></script>
+
+
+  
+</head>
+
+<body alink="#FF0000" data-gr-c-s-loaded="true" onload="showHome();">
+	<div id=main>
+		<img src="./files/seattle.jpg" alt="seattle-Lake Union" id=seattle_pic class= "center">
+		<title>Jennifer Morse Math Homepage</title>
+
+		<h1><center>Professor Jennifer Morse</center></h1>
+
+
+
+		<div class="square"><h2  >CONTACT</h2>
+			<address>
+			  <strong>Pronouns:</strong> She/Her <br>
+			  			  <strong>Email:</strong>
+			  <a href="Mailto:morsej@virginia.edu">morsej@virginia.edu</a>
+			  
+			  <br>
+			  <strong>Office:</strong> 			 Kerchof 216 <br>			  
+			  
+
+
+			  <strong>Mailing Address:</strong><br>
+			  University of Virginia <br>
+			  Department of Mathematics<br>
+			  Charlottesville, VA 22904, USA <br>
+			</address>
+		</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <HTML>
 <TITLE>Jennifer MORSE</TITLE>
