--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body alink="#FF0000" data-gr-c-s-loaded="true" onload="showHome();">
 	<div id=main>
-		<img src="./files/seattle.jpg" alt="seattle-Lake Union" id=seattle_pic class= "center">
+		<img src="./kid.jpg" alt="kid" id=kids_pic class= "center">
 		<title>Jennifer Morse Math Homepage</title>
 
 		<h1><center>Professor Jennifer Morse</center></h1>
