--- a/index.html
+++ b/index.html
@@ -1,48 +1,4 @@
 
-<head><meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="files/new_style.css">
-  <script type="text/javascript" src= "files/jquery-3.3.1.min.js"></script>
-
-
-  
-</head>
-
-<body alink="#FF0000" data-gr-c-s-loaded="true" onload="showHome();">
-	<div id=main>
-		<img src="./kid.jpg" alt="kid" id=kids_pic class= "center">
-		<title>Jennifer Morse Math Homepage</title>
-
-		<h1><center>Professor Jennifer Morse</center></h1>
-
-
-
-		<div class="square"><h2  >CONTACT</h2>
-			<address>
-			  <strong>Pronouns:</strong> She/Her <br>
-			  			  <strong>Email:</strong>
-			  <a href="Mailto:morsej@virginia.edu">morsej@virginia.edu</a>
-			  
-			  <br>
-			  <strong>Office:</strong> 			 Kerchof 216 <br>			  
-			  
-
-
-			  <strong>Mailing Address:</strong><br>
-			  University of Virginia <br>
-			  Department of Mathematics<br>
-			  Charlottesville, VA 22904, USA <br>
-			</address>
-		</div>
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -57,42 +13,11 @@
 link="brown" vlink="brown" marginheight=0 marginwidth=0 topmargin=0 
 leftmargin=0 alink="brown" bgcolor="beige" bgproperties="fixed">
 <div align="left"> <font size="0" face="Arial, Helvetica, sans-serif">
-
-
-<TABLE BORDER="0" CELLSPACING="2" CELLPADDING="2">
-
-<CAPTION>
-</CAPTION>
-
-<TR>
-
-<TD> 
-<FONT FACE="arial,helvetica" COLOR="orange" >
-<a href="http://math.virginia.edu/ims/workshop-fall-2018/">
-Workshop on Representation Theory, Combinatorics, and Geometry:
-</a>
-University of Virginia, October 19-21, 2018. 
-</font>
-
-<FONT FACE="arial,helvetica" COLOR="orange" >
-<a href="http://math.virginia.edu/ims/lectures/andrei-okounkov/">
-Virginia Mathematics Lectures:
-</font>
-Andrei Okounkov (October 22-24)
-
-
-<TD> 
-<FONT FACE="arial,helvetica" COLOR="orange" >
-<a href="http://madmaggiefarm.com">
-</a>
-</font>
-</TD>
-
-<TD> 
-
+	
+	
 <TABLE BORDER="0" CELLSPACING="1" CELLPADDING="1">
 <TR>
-kid.jpg
+
 <TD> 
 <FONT FACE="arial,helvetica" COLOR="orange" >
 <h3>
@@ -197,3 +122,37 @@ Favorites
 												       </TD>
 												       </TR>
 
+
+
+
+<TABLE BORDER="0" CELLSPACING="2" CELLPADDING="2">
+<img src="./kid.jpg" alt="kid" id=kids_pic class= "center">
+<CAPTION>
+	Morse Homepage
+</CAPTION>
+
+<TR>
+
+<TD> 
+<FONT FACE="arial,helvetica" COLOR="orange" >
+<a href="http://math.virginia.edu/ims/workshop-fall-2018/">
+Workshop on Representation Theory, Combinatorics, and Geometry:
+</a>
+University of Virginia, October 19-21, 2018. 
+</font>
+
+<FONT FACE="arial,helvetica" COLOR="orange" >
+<a href="http://math.virginia.edu/ims/lectures/andrei-okounkov/">
+Virginia Mathematics Lectures:
+</font>
+Andrei Okounkov (October 22-24)
+
+
+<TD> 
+<FONT FACE="arial,helvetica" COLOR="orange" >
+<a href="http://madmaggiefarm.com">
+</a>
+</font>
+</TD>
+
+<TD> 
