--- a/index.html
+++ b/index.html
@@ -2,107 +2,114 @@
 
 
 
-
-<HTML>
-<TITLE>Jennifer MORSE</TITLE>
-</HEAD>
+<!DOCTYPE Html>
+<html>
 
 
+<head>
+  <title>Jennifer Morse Math Homepage</title>
+</head>
 
-<body text="#000000" align="left" 
-link="brown" vlink="brown" marginheight=0 marginwidth=0 topmargin=0 
-leftmargin=0 alink="brown" bgcolor="beige" bgproperties="fixed">
-<div align="left"> <font size="0" face="Arial, Helvetica, sans-serif">
-	
-	
-<TABLE BORDER="0" CELLSPACING="1" CELLPADDING="1">
-<TR>
+<meta name="Morse" content="Morse Webpage">
 
-<TD> 
-<FONT FACE="arial,helvetica" COLOR="orange" >
-<h3>
-Jennifer 
-<b>Morse</b> 
-</h3>
+
+<body bgcolor="lightgray">
+
+<body text="black">
+
+<TABLE BORDER="5"    WIDTH="100%"   CELLPADDING="4" CELLSPACING="3">
+   <TR ALIGN="LEFT">
+      <TH COLSPAN="2">
+         <H3><BR>
+<FONT FACE="arial,helvetica" COLOR="black" >
+         JENNIFER MORSE'S WEBPAGE
+         </H3>
 </font>
-</TD>
-</TR>
-	      </TD>
-	      </TR>
-
-
-
-	      <TR>
-	      <TD>
-	      <FONT FACE="arial,helvetica" COLOR="brown" >
-Professor of Math
-	      	    <br> 
-University of Virginia
-					    	    <br> 
-Charlottesville, VA 
+      </TH>
+   </TR>
+   <TR ALIGN="LEFT">
+      <TH>Professor
+      <br>
+<a href="http://www.math.virginia.edu/">Department of Mathematics</a> <br>
+141 Cabell Drive<br>
+Charlottesville, VA 22904<br>
+U.S.A. <br>
+<p>
+<p>
+Office: Kerchof 206 <br>
+Email:   morsej at virginia dot edu</a>
+      </TH>
+      <TH>
+<img src="./kid.jpg" border=2 height=200 align=top></img>
+      </TH>
+   </TR>
+   <TR ALIGN="left">
+      <TD>
+      <p>
+      <strong>
+Research in Algebraic Combinatorics 
 <br>
-<BR>Office: Korman  262
-<br>Email: m o r s e j @ v i r g i n i a . e d u
-<br> 
-</FONT>
-<FONT FACE="arial,helvetica" COLOR="yellow" >
-<br> 
-</TD>
-</TR>
-<TR>
-<TD BGCOLOR="yellow">
-<FONT FACE="arial,helvetica" COLOR="yellow" >
-</FONT>
-</TD>
-</TR>
-												  <TR>
-												  <TD>
-										
-<br> 
-<a href="http://arxiv.org/find/math/1/au:+Morse_J/0/1/0/all/0/1">
-<b>
-<FONT COLOR="orange">
-Papers
+<p>
+  <a href="http://arxiv.org/find/math/1/au:+Morse_J/0/1/0/all/0/1">
+  Publications</a>
+  <p>
+ <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1855804&HistoricalAwards=false">
+Collaborative Research: Catalan Function and Schubert Calculus
 </a>
+<p>
+   <a href="http://garsia.math.yorku.ca/dokuwiki/doku.php?id=start">NSF-Focused Research Group: Affine Schubert Calculus</a>
+   <p>
+      </TD>
+      <TD>
+      <strong> Upcoming Conferences
+      <p>
+<a href="http://fpsac.org/">
+  Formal Power Series and Algebraic Combinatorics </a>
+<li>
+<a href="https://fpsac2020.math.biu.ac.il/">
+Ramat-Gan (Israel)</a>, July 13--17 2020
+<li>
+<a href="http://fpsac.org/confs/fpsac-2021/">
+Bangalore (India)</a>, July 5--9 2021
+</a>
+      </TD>
+   </TR>
+</TABLE>
+
 
 <p>
-<a href="http://www.maagc.info/virginia-2020">
-<FONT COLOR="orange">
-Mid-Atlantic Algebraic Geometry and Combinatorics Conference
+ <ul>
+</ul>
+<ul>
+      <strong>
+Conferences at UVA, March 13--15, 2020 
+<ul>
+<li>
+<a href="http://www.maagc.info/virginia-2020/">
+Mid-Atlantic Algebraic Geometry and Combinatorics
 </a>
-
-<p>
-
-
+<li>
+<a href="http://www.ams.org/meetings/sectional/2273_program_ss29.html#title">
+AMS Sectional: Recent Combinatorial Advances In Representation Theory and Algebraic Geometry 
+</a>
+  </ul>
+ <ul>
 <a href="kbranching">
 <FONT COLOR="orange">
-k-Schur functions in terms of Schurs (maple)
+k-Schur functions in terms of Schurs (Maple).
 </a>
-<p>
-
-<a href="http://www.ansp.org/education/programs/">
-<FONT COLOR="orange">
-Academy of Natural Sciences
-</a>
-<p>
-
-<p>
-<a href="http://drexel.edu/dragonsteach/">
-<FONT COLOR="orange">
-DragonsTeach
-</a>
-<p>
+ </ul>
+</td>
+</tr>
+</table>
 
 
 
-<a href="http://www.math.drexel.edu/~morsej/scarphoto ">
-<FONT COLOR="orange">
-Favorites
-</a>
+
+										
 
 <p>
-<br>
-<p>
+
 
 
 
@@ -122,37 +129,3 @@ Favorites
 												       </TD>
 												       </TR>
 
-
-
-
-<TABLE BORDER="0" CELLSPACING="2" CELLPADDING="2">
-<img src="./kid.jpg" alt="kid" id=kids_pic class= "center">
-<CAPTION>
-	Morse Homepage
-</CAPTION>
-
-<TR>
-
-<TD> 
-<FONT FACE="arial,helvetica" COLOR="orange" >
-<a href="http://math.virginia.edu/ims/workshop-fall-2018/">
-Workshop on Representation Theory, Combinatorics, and Geometry:
-</a>
-University of Virginia, October 19-21, 2018. 
-</font>
-
-<FONT FACE="arial,helvetica" COLOR="orange" >
-<a href="http://math.virginia.edu/ims/lectures/andrei-okounkov/">
-Virginia Mathematics Lectures:
-</font>
-Andrei Okounkov (October 22-24)
-
-
-<TD> 
-<FONT FACE="arial,helvetica" COLOR="orange" >
-<a href="http://madmaggiefarm.com">
-</a>
-</font>
-</TD>
-
-<TD> 
