--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Email:   morsej at virginia dot edu</a>
 <img src="./kid.jpg" border=2 height=200 align=top></img>
       </TH>
    </TR>
+
    <TR ALIGN="left">
       <TD>
       <p>
@@ -58,20 +59,30 @@ Collaborative Research: Catalan Function and Schubert Calculus
 </a>
 <p>
    <a href="http://garsia.math.yorku.ca/dokuwiki/doku.php?id=start">NSF-Focused Research Group: Affine Schubert Calculus</a>
-   <p>
       </TD>
       <TD>
       <strong> Upcoming Conferences
       <p>
+      <li>
 <a href="http://fpsac.org/">
   Formal Power Series and Algebraic Combinatorics </a>
-<li>
-<a href="https://fpsac2020.math.biu.ac.il/">
+<ul>
+<a href="https://fpsac2021.math.biu.ac.il/">
 Ramat-Gan (Israel)</a>, July 13--17 2020
-<li>
+</ul>
+<ul>
 <a href="http://fpsac.org/confs/fpsac-2021/">
 Bangalore (India)</a>, July 5--9 2021
 </a>
+</ul>
+</li>
+<p>
+<li>
+<a href="https://icerm.brown.edu/programs/sp-s21/w3/">
+ICERM: Geometry and Combinatorics from Root Systems
+</a>
+</li>
+<p>
       </TD>
    </TR>
 </TABLE>
@@ -80,25 +91,6 @@ Bangalore (India)</a>, July 5--9 2021
 <p>
  <ul>
 </ul>
-<ul>
-      <strong>
-Conferences at UVA, March 13--15, 2020 
-<ul>
-<li>
-<a href="http://www.maagc.info/virginia-2020/">
-Mid-Atlantic Algebraic Geometry and Combinatorics
-</a>
-<li>
-<a href="http://www.ams.org/meetings/sectional/2273_program_ss29.html#title">
-AMS Sectional: Recent Combinatorial Advances In Representation Theory and Algebraic Geometry 
-</a>
-  </ul>
- <ul>
-<a href="kbranching">
-<FONT COLOR="orange">
-k-Schur functions in terms of Schurs (Maple).
-</a>
- </ul>
 </td>
 </tr>
 </table>
