--- a/index.html
+++ b/index.html
@@ -17,17 +17,23 @@
 
 <body text="black">
 
-<TABLE BORDER="5"    WIDTH="100%"   CELLPADDING="4" CELLSPACING="3">
-   <TR ALIGN="LEFT">
+<TABLE BORDER="5"    WIDTH="100%"   CELLPADDING="4" CELLSPACING="1">
+   <TR ALIGN="CENTER">
+   
       <TH COLSPAN="2">
-         <H3><BR>
+         <H3>
 <FONT FACE="arial,helvetica" COLOR="black" >
          JENNIFER MORSE'S WEBPAGE
          </H3>
 </font>
       </TH>
+
    </TR>
-   <TR ALIGN="LEFT">
+</TABLE>
+
+<TABLE BORDER="5"    WIDTH="100%"   CELLPADDING="4" CELLSPACING="3">
+
+   <TR ALIGN="CENTER">
       <TH>Professor
       <br>
 <a href="http://www.math.virginia.edu/">Department of Mathematics</a> <br>
@@ -36,20 +42,20 @@ Charlottesville, VA 22904<br>
 U.S.A. <br>
 <p>
 <p>
-Office: Kerchof 206 <br>
+<i>Office: Kerchof 206 <br>
 Email:   morsej at virginia dot edu</a>
+</i>
       </TH>
+
       <TH>
 <img src="./kid.jpg" border=2 height=200 align=top></img>
       </TH>
+
    </TR>
 
    <TR ALIGN="left">
       <TD>
-      <p>
-      <strong>
-Research in Algebraic Combinatorics 
-<br>
+      <strong> Research in Algebraic Combinatorics 
 <p>
   <a href="http://arxiv.org/find/math/1/au:+Morse_J/0/1/0/all/0/1">
   Publications</a>
@@ -60,6 +66,7 @@ Collaborative Research: Catalan Function and Schubert Calculus
 <p>
    <a href="http://garsia.math.yorku.ca/dokuwiki/doku.php?id=start">NSF-Focused Research Group: Affine Schubert Calculus</a>
       </TD>
+
       <TD>
       <strong> Upcoming Conferences
       <p>
@@ -82,19 +89,63 @@ Bangalore (India)</a>, July 5--9 2021
 ICERM: Geometry and Combinatorics from Root Systems
 </a>
 </li>
-<p>
-      </TD>
-   </TR>
+</TD>
+</TR>
+</th>
 </TABLE>
+<TABLE BORDER="5"    WIDTH="100%"   CELLPADDING="4" CELLSPACING="3">
+   <TR ALIGN="LEFT">
+      <TH COLSPAN="1">
+<FONT FACE="arial,helvetica" COLOR="black" >
+RECENT Publications
+</font>
+      </TH>
+  <TR ALIGN="left">
+      <TH>
+  <ul>
+  <li>
+J. Blasiak, J. Morse and A. Pun,
+<a href="https://arxiv.org/pdf/2007.04952.pdf">
+<i>Demazure crystals and the Schur positivity of Catalan functions</i>
+</a>.
+(2020) ArXiv e-prints.
+
+<li> L. Chen, E. Milićević, and J. Morse, 
+<a href="https://arxiv.org/pdf/2008.13765.pdf">
+<i>An affine approach to Peterson comparison</i> </a>.
+(2020) ArXiv e-prints.
+
+<li>
+J. Blasiak, J. Morse, A. Pun, and D. Summers, 
+<a href="https://arxiv.org/pdf/1811.02490.pdf">
+<i>k-Schur expansions of Catalan functions</i></a>.
+Adv. in Math., 371 (2020) 107209.
+<li>
+J. Morse, J. Pan, W. Poh, A. Schilling, 
+<a href="https://arxiv.org/pdf/1911.08732.pdf">
+<i>A crystal on decreasing factorizations in the 0-Hecke monoid</i></a>.
+Electronic J. Comb. 27(2) (2020).
+
+<li> J. Blasiak, J. Morse, A. Pun, and D. Summers, 
+<a href="https://arxiv.org/pdf/1804.03701.pdf">
+<i>Catalan functions and
+$k$-Schur positivity</i></a>. J. Amer. Math. Soc., 32 (2019) 921--963.
+
+<li> J. Morse and R. Kaliszewski, 
+<a href="https://arxiv.org/pdf/1710.00801.pdf">
+<i>Colorful combinatorics of Macdonald polynomials</i></a>.
+European J. of Comb. 81 (2019), 354-377.
+
+</li>
+</ul>
+
+
+      </TH>
+   </TR>
+
 
 
 <p>
- <ul>
-</ul>
-</td>
-</tr>
-</table>
-
 
 
 
