--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <TH>Professor
       <br>
 <a href="http://www.math.virginia.edu/">Department of Mathematics</a> <br>
+	      University of Virginia<br>
 141 Cabell Drive<br>
 Charlottesville, VA 22904<br>
 U.S.A. <br>
@@ -103,6 +104,14 @@ RECENT Publications
   <TR ALIGN="left">
       <TH>
   <ul>
+	  
+  <li>
+J. Blasiak, J. Morse and G. Seelinger,
+<a href="https://arxiv.org/abs/2010.01759">
+<i>K-theoretic Catalan functions</i>
+</a>.
+(2020) ArXiv e-prints.	  
+	  
   <li>
 J. Blasiak, J. Morse and A. Pun,
 <a href="https://arxiv.org/pdf/2007.04952.pdf">
@@ -129,7 +138,7 @@ Electronic J. Comb. 27(2) (2020).
 <li> J. Blasiak, J. Morse, A. Pun, and D. Summers, 
 <a href="https://arxiv.org/pdf/1804.03701.pdf">
 <i>Catalan functions and
-$k$-Schur positivity</i></a>. J. Amer. Math. Soc., 32 (2019) 921--963.
+k-Schur positivity</i></a>. J. Amer. Math. Soc., 32 (2019) 921--963.
 
 <li> J. Morse and R. Kaliszewski, 
 <a href="https://arxiv.org/pdf/1710.00801.pdf">
