--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@ Collaborative Research: Catalan Function and Schubert Calculus
   Formal Power Series and Algebraic Combinatorics </a>
 <ul>
 <a href="https://fpsac2021.math.biu.ac.il/">
-Ramat-Gan (Israel)</a>, July 13--17 2020
+Ramat-Gan (Israel)</a>, July 5--9 2021
 </ul>
 <ul>
 <a href="http://fpsac.org/confs/fpsac-2021/">
-Bangalore (India)</a>, July 5--9 2021
+Bangalore (India)</a>, Summer 2022
 </a>
 </ul>
 </li>
@@ -94,6 +94,7 @@ ICERM: Geometry and Combinatorics from Root Systems
 </TR>
 </th>
 </TABLE>
+	
 <TABLE BORDER="5"    WIDTH="100%"   CELLPADDING="4" CELLSPACING="3">
    <TR ALIGN="LEFT">
       <TH COLSPAN="1">
@@ -155,9 +156,17 @@ European J. of Comb. 81 (2019), 354-377.
 
 
 <p>
-
-
-
+<TABLE BORDER="5"    WIDTH="100%"   CELLPADDING="4" CELLSPACING="3">
+   <TR ALIGN="LEFT">
+      <TH COLSPAN="1">
+<FONT FACE="arial,helvetica" COLOR="black" >
+	 <a href="https://arxiv.org/search/math?searchtype=author&query=Morse%2C+J">
+		 OTHER Publications</a>
+</font>
+      </TH>
+  <TR ALIGN="left">
+      <TH>
+	     
 										
 
 <p>
