--- a/index.html
+++ b/index.html
@@ -105,6 +105,20 @@ RECENT Publications
   <TR ALIGN="left">
       <TH>
   <ul>
+  <li>
+J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
+<a href="https://arxiv.org/search/math?searchtype=author&query=Morse%2C+J">
+<i>A proof of the Delta Conjecture</i>
+</a>.
+(2021) ArXiv e-prints.	 
+	  
+  <li>
+J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
+<a href="https://arxiv.org/search/math?searchtype=author&query=Morse%2C+J">
+<i>A Shuffle Theorem for paths under any line</i>
+</a>.
+(2021) ArXiv e-prints.	 
+	  
 	  
   <li>
 J. Blasiak, J. Morse and G. Seelinger,
