--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 	  
   <li>
 J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
-<a href="https://arxiv.org/search/math?searchtype=author&query=Morse%2C+J">
+<a href="https://arxiv.org/abs/2102.07931">
 <i>A Shuffle Theorem for paths under any line</i>
 </a>.
 (2021) ArXiv e-prints.	 
