--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Collaborative Research: Catalan Function and Schubert Calculus
 Ramat-Gan (Israel)</a>, July 5--9 2021
 </ul>
 <ul>
-<a href="http://fpsac.org/confs/fpsac-2021/">
+<a href="http://fpsac.org/confs/fpsac-2022/">
 Bangalore (India)</a>, Summer 2022
 </a>
 </ul>
@@ -90,6 +90,13 @@ Bangalore (India)</a>, Summer 2022
 ICERM: Geometry and Combinatorics from Root Systems
 </a>
 </li>
+	<li>
+		<a href="https://prima2021.primamath.org/">
+PRIMA Congress, Dec 5--10,2021
+		</a>
+	</li>
+	
+	
 </TD>
 </TR>
 </th>
@@ -107,7 +114,7 @@ RECENT Publications
   <ul>
   <li>
 J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
-<a href="https://arxiv.org/search/math?searchtype=author&query=Morse%2C+J">
+<a href="https://arxiv.org/abs/2102.08815">
 <i>A proof of the Delta Conjecture</i>
 </a>.
 (2021) ArXiv e-prints.	 
