--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ RECENT Publications
   <li>
 J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/abs/2102.08815">
-<i>A proof of the Delta Conjecture</i>
+<i>A proof of the Extended Delta Conjecture</i>
 </a>.
 (2021) ArXiv e-prints.	 
 	  
