--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@ Collaborative Research: Catalan Function and Schubert Calculus
   Formal Power Series and Algebraic Combinatorics </a>
 <ul>
 <a href="https://fpsac2021.math.biu.ac.il/">
-Ramat-Gan (Israel)</a>, July 5--9 2021
+Ramat-Gan (Israel)</a>, January 10-13, 2022
 </ul>
 <ul>
 <a href="http://fpsac.org/confs/fpsac-2022/">
-Bangalore (India)</a>, Summer 2022
+Bangalore (India)</a>, July 18-22, 2022
 </a>
 </ul>
 </li>
