--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Collaborative Research: Catalan Function and Schubert Calculus
 Ramat-Gan (Israel)</a>, January 10-13, 2022
 </ul>
 <ul>
-<a href="http://fpsac.org/confs/fpsac-2022/">
+<a href="http://math.iisc.ac.in/fpsac2022/">
 Bangalore (India)</a>, July 18-22, 2022
 </a>
 </ul>
