--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@ Bangalore (India)</a>, July 18-22, 2022
 </ul>
 </li>
 <p>
+	<li>
+<a href="https://jcb.labri.fr/2022/">	
+Journées de combinatoire de Bordeaux (JCB)	
+	</a>
+	      </li>
 <li>
 <a href="https://icerm.brown.edu/programs/sp-s21/w3/">
 ICERM: Geometry and Combinatorics from Root Systems
