--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@ Bangalore (India)</a>, July 18-22, 2022
 <p>
 	<li>
 <a href="https://jcb.labri.fr/2022/">	
-Journées de combinatoire de Bordeaux (JCB)	
-	</a>
+Journées de combinatoire de Bordeaux (JCB),	
+	</a>  9 au 11 février 2022
 	      </li>
+	<p>
 <li>
 <a href="https://icerm.brown.edu/programs/sp-s21/w3/">
 ICERM: Geometry and Combinatorics from Root Systems
