--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Email:   morsej at virginia dot edu</a>
       <TD>
       <strong> Research in Algebraic Combinatorics 
 <p>
-  <a href="http://arxiv.org/find/math/1/au:+Morse_J/0/1/0/all/0/1">
+  <a href="https://arxiv.org/search/?query=Morse%2C+Jennifer&searchtype=author&abstracts=show&order=-announced_date_first&size=50">
   Publications</a>
   <p>
  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1855804&HistoricalAwards=false">
