--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@ Bangalore (India)</a>, July 18-22, 2022
 </li>
 <p>
 	<li>
+<a href="http://www.crm.umontreal.ca/2022/OPSFA22/index_e.php">	
+	16th International Symposium on Orthogonal Polynomials, Special Functions and Applications,
+	</a>  13 to 17 June 2022
+	      </li>
+	<p>	
+	<li>
 <a href="https://jcb.labri.fr/2022/">	
 Journées de combinatoire de Bordeaux (JCB),	
 	</a>  9 au 11 février 2022
