--- a/index.html
+++ b/index.html
@@ -125,6 +125,23 @@ RECENT Publications
   <TR ALIGN="left">
       <TH>
   <ul>
+<li>
+J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
+<a href="https://arxiv.org/pdf/2112.07070.pdf">
+<i>Dens, nests, and the Loehr-Warrington conjecture</i>
+</a>.
+(2021) ArXiv e-prints.	 	
+	  
+	  
+<li>
+J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
+<a href="https://arxiv.org/pdf/2112.07063.pdf">
+<i>LLT polynomials in the Schiffmann algebra</i>
+</a>.
+(2021) ArXiv e-prints.	 	  
+	  
+	  
+	  
   <li>
 J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/abs/2102.08815">
