--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@ Bangalore (India)</a>, July 18-22, 2022
 </ul>
 </li>
 <p>
+		<li>
+<a href="http://www.canadam.ca/">
+	CanaDAM 2023,
+	</a>  June 5–8, 2023
+	      </li>
+	<p>
+	
+	
 	<li>
 <a href="http://www.crm.umontreal.ca/2022/OPSFA22/index_e.php">	
 	16th International Symposium on Orthogonal Polynomials, Special Functions and Applications,
