--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ U.S.A. <br>
 <p>
 <p>
 <i>Office: Kerchof 206 <br>
-Email:   morsej at virginia dot edu</a>
+Email:   morsej123 at gmail dot com</a>
 </i>
       </TH>
 
