--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ National Science Foundation
 <a href="http://fpsac.org/">
   Formal Power Series and Algebraic Combinatorics </a>
 <ul>
-<a href="https://fpsac2021.math.biu.ac.il/">
-Ramat-Gan (Israel)</a>, January 10-13, 2022
+<a href="http://fpsac23.math.ucdavis.edu/">
+UC Davis (USA)</a>, July 17-21, 2023
 </ul>
 <ul>
 <a href="http://math.iisc.ac.in/fpsac2022/">
@@ -160,7 +160,7 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/abs/2102.08815">
 <i>A proof of the Extended Delta Conjecture</i>
-</a>. accepted to Forum of Pi (2022).	
+</a>. accepted to Forum of Math, Pi (2022).	
  
 	  
   <li>
@@ -168,7 +168,7 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/abs/2102.07931">
 <i>A Shuffle Theorem for paths under any line</i>
 </a>.
-accepted to Forum of Pi (2022).	 
+accepted to Forum of Math, Pi (2022).	 
 	  
 	  
   <li>
