--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@ Bangalore (India)</a>, July 18-22, 2022
 </li>
 <p>
 	<li>
+<a href="https://sites.google.com/ncsu.edu/selieworkshop2023">
+	13th Southeastern Lie Theory Workshop 
+</a>
+</li>
+	<p>
+	
+	<li>
 <a href="http://www.crm.umontreal.ca/2022/OPSFA22/index_e.php">	
 	16th International Symposium on Orthogonal Polynomials, Special Functions and Applications,
 	</a>  13 to 17 June 2022
@@ -111,11 +118,7 @@ Journées de combinatoire de Bordeaux (JCB),
 	</a>  9 au 11 février 2022
 	      </li>
 	<p>
-<li>
-<a href="https://icerm.brown.edu/programs/sp-s21/w3/">
-ICERM: Geometry and Combinatorics from Root Systems
-</a>
-</li>
+
 	<p>
 
 	
