--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 <TABLE BORDER="5"    WIDTH="100%"   CELLPADDING="4" CELLSPACING="3">
 
    <TR ALIGN="CENTER">
+	   
+	    <TH>
+<img src="./kid.jpg" border=2 height=200 align=top></img>
+      </TH>
+	
       <TH>Professor
       <br>
 <a href="http://www.math.virginia.edu/">Department of Mathematics</a> <br>
@@ -48,9 +53,7 @@ Email:   morsej123 at gmail dot com</a>
 </i>
       </TH>
 
-      <TH>
-<img src="./kid.jpg" border=2 height=200 align=top></img>
-      </TH>
+     
 
    </TR>
 
@@ -101,11 +104,19 @@ Bangalore (India)</a>, July 18-22, 2022
 <p>
 	<li>
 <a href="https://sites.google.com/ncsu.edu/selieworkshop2023">
-	13th Southeastern Lie Theory Workshop 
+	13th Southeastern Lie Theory Workshop,
 </a>
+		
+	May 12-14, 2023
 </li>
 	<p>
-	
+		<li>
+<a href="https://www.albany.edu/~sdc/AWM21/">
+		Women in Algebra and Combinatorics,
+			</a>
+			April 28-30, 2023.
+		</li>
+		<p>
 	<li>
 <a href="http://www.crm.umontreal.ca/2022/OPSFA22/index_e.php">	
 	16th International Symposium on Orthogonal Polynomials, Special Functions and Applications,
