--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@ European J. of Comb. 81 (2019), 354-377.
 </tr>
 												     
 
-<TD BGCOLOR="yellow">
-<FONT FACE="arial,helvetica" COLOR="yellow" >
+<TD BGCOLOR="pink">
+<FONT FACE="arial,helvetica" COLOR="pink" >
 </FONT>
 </TD>
 <TR> <TD><p><p></TD> </TR> 
