--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <TH COLSPAN="2">
          <H3>
 <FONT FACE="arial,helvetica" COLOR="black" >
-         JENNIFER MORSE'S WEBPAGE
+         JENNIFER MORSE
          </H3>
 </font>
       </TH>
