--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 <img src="./kid.jpg" border=2 height=200 align=top></img>
       </TH>
 	
-      <TH>Professor
+      <TH>
+	         <TR ALIGN="left">
+	      
+	      Professor
       <br>
 <a href="http://www.math.virginia.edu/">Department of Mathematics</a> <br>
 	      University of Virginia<br>
@@ -169,7 +172,7 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/abs/2102.08815">
 <i>A proof of the Extended Delta Conjecture</i>
-</a>. accepted to Forum of Math, Pi (2022).	
+</a>. Forum of Math, Pi (2023).	
  
 	  
   <li>
@@ -177,7 +180,7 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/abs/2102.07931">
 <i>A Shuffle Theorem for paths under any line</i>
 </a>.
-accepted to Forum of Math, Pi (2022).	 
+Forum of Math, Pi (2023).	 
 	  
 	  
   <li>
