--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/pdf/2112.07070.pdf">
 <i>Dens, nests, and the Loehr-Warrington conjecture</i>
 </a>.
-(2021) ArXiv e-prints.	 	
+ArXiv e-prints.	 	
 	  
 	  
 <li>
@@ -164,7 +164,7 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/pdf/2112.07063.pdf">
 <i>LLT polynomials in the Schiffmann algebra</i>
 </a>.
-(2021) ArXiv e-prints.	 	  
+ArXiv e-prints.	 	  
 	  
 	  
 	  
