--- a/index.html
+++ b/index.html
@@ -33,16 +33,21 @@
 
  <TR ALIGN="left">	
  
-	<td>   
+	
 	    <TH>
 <img src="./kid.jpg" border=2 height=200 align=top></img>
       </TH>
-	</td>
 
-	 	    <TD>
+
       <TH>
 	         Professor
-			
+	      </th>
+	</tr>
+	<tr>
+	<td>
+	&nbsp;
+	</td>
+	<td>
       <br>
 <a href="http://www.math.virginia.edu/">Department of Mathematics</a> <br>
 	      University of Virginia<br>
@@ -54,9 +59,10 @@ U.S.A. <br>
 <i>Office: Kerchof 206 <br>
 Email:   morsej123 at gmail dot com</a>
 </i>
-     </TH>
+   
 
 	</TD>
+	  </TH>
 	   </TR>
 	
 	
