--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <Td>
 	         Professor
-	
+	     
       <br>
 <a href="http://www.math.virginia.edu/">Department of Mathematics</a> <br>
 	      University of Virginia<br>
@@ -62,7 +62,7 @@ Email:   morsej123 at gmail dot com</a>
 
    <TR ALIGN="left">
       <TD>
-      <strong> Research in Algebraic Combinatorics 
+	      <h2> Research in Algebraic Combinatorics </h2>
 <p>
   <a href="https://arxiv.org/search/?query=Morse%2C+Jennifer&searchtype=author&abstracts=show&order=-announced_date_first&size=50">
   Publications</a>
@@ -82,7 +82,7 @@ National Science Foundation
       </TD>
 
       <TD>
-      <strong> Upcoming Conferences
+	      <h2> Upcoming Conferences</h2>
       <p>
 	      
 	      		<li>
