--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Email:   morsej123 at gmail dot com</a>
    <TR ALIGN="left">
       <TD>
 	      	      <FONT FACE="arial,helvetica" COLOR="black" >
-Research in Algebraic Combinatorics 
+<h3>Research in Algebraic Combinatorics </h3>
 </font>
 	   
 <p>
