--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ Email:   morsej123 at gmail dot com</a>
   Publications</a>
   <p>
 	  <p>
-		  <p<
-	 Generously support from
+		  <p>
+	 Generous support from
 		  <p>
  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1855804&HistoricalAwards=false">
 National Science Foundation
