--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ ArXiv e-prints.
 J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/abs/2102.08815">
 <i>A proof of the Extended Delta Conjecture</i>
-</a>. Forum of Math, Pi (2023).	
+</a>. Forum of Math, Pi. Volume 11 (2023).	
  
 	  
   <li>
@@ -188,14 +188,14 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/abs/2102.07931">
 <i>A Shuffle Theorem for paths under any line</i>
 </a>.
-Forum of Math, Pi (2023).	 
+Forum of Math, Pi. Volume 11 (2023).	 
 	  
 	  
   <li>
 J. Blasiak, J. Morse and G. Seelinger,
 <a href="https://arxiv.org/abs/2010.01759">
 <i>K-theoretic Catalan functions</i>
-</a>. Adv. in Math. 404B (2022) 108421
+</a>. Adv in Math. 404B (2022) 108421
   
 	  
   <li>
@@ -219,17 +219,17 @@ Adv. in Math., 371 (2020) 107209.
 J. Morse, J. Pan, W. Poh, A. Schilling, 
 <a href="https://arxiv.org/pdf/1911.08732.pdf">
 <i>A crystal on decreasing factorizations in the 0-Hecke monoid</i></a>.
-Electronic J. Comb. 27(2) (2020).
+Electronic J Comb. 27(2) (2020).
 
 <li> J. Blasiak, J. Morse, A. Pun, and D. Summers, 
 <a href="https://arxiv.org/pdf/1804.03701.pdf">
 <i>Catalan functions and
-k-Schur positivity</i></a>. J. Amer. Math. Soc., 32 (2019) 921--963.
+k-Schur positivity</i></a>. J Amer Math Soc, 32 (2019) 921--963.
 
 <li> J. Morse and R. Kaliszewski, 
 <a href="https://arxiv.org/pdf/1710.00801.pdf">
 <i>Colorful combinatorics of Macdonald polynomials</i></a>.
-European J. of Comb. 81 (2019), 354-377.
+European J of Comb, 81 (2019), 354-377.
 
 </li>
 </ul>
