--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body text="black">
 
 <TABLE BORDER="5"    WIDTH="100%"   CELLPADDING="4" CELLSPACING="1">
-
+ <TR ALIGN="left">	
       <TH COLSPAN="2">
          <H3>
 <FONT FACE="arial,helvetica" COLOR="black" >
@@ -26,6 +26,7 @@
          </H3>
 
       </TH>
+	      </tr>
 
 </TABLE>
 
