--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <b>
 	
 <head>
-  <title>Jennifer Morse Math Homepage</title>
+  <title>Jennifer Morse Math</title>
 </head>
 
 <meta name="Morse" content="Morse Webpage">
@@ -154,7 +154,6 @@ Journées de combinatoire de Bordeaux (JCB),
 	
 </TD>
 </TR>
-</th>
 </TABLE>
 	
 <TABLE BORDER="5"    WIDTH="100%"   CELLPADDING="4" CELLSPACING="1">
