--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@ UPCOMING CONFERENCES
 <a href="http://fpsac.org/">
   Formal Power Series and Algebraic Combinatorics </a>
 <ul>
+	<a href="https://fpsac2024.rub.de/">
+Bochum, Germany 2024
+</ul>
+<ul>
 <a href="http://fpsac23.math.ucdavis.edu/">
 UC Davis (USA)</a>, July 17-21, 2023
 </ul>
