--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ UPCOMING CONFERENCES
   Formal Power Series and Algebraic Combinatorics </a>
 <ul>
 	<a href="https://fpsac2024.rub.de/">
-Bochum, Germany 2024
+Bochum, Germany</a>, July 22-26, 2024 
 </ul>
 <ul>
 <a href="http://fpsac23.math.ucdavis.edu/">
