--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ UC Davis (USA)</a>, July 17-21, 2023
 		      <p>
 		      <li>
 <a href="http://www.canadam.ca/">
-	CanaDAM 2023,
-	</a>  June 5–8, 2023
+	CanaDAM in Winnipeg
+	</a>, June 5–8, 2023
 	      </li>
 
 <p>
@@ -140,17 +140,7 @@ UC Davis (USA)</a>, July 17-21, 2023
 			April 28-30, 2023.
 		</li>
 		<p>
-	<li>
-<a href="http://www.crm.umontreal.ca/2022/OPSFA22/index_e.php">	
-	16th International Symposium on Orthogonal Polynomials, Special Functions and Applications,
-	</a>  13 to 17 June 2022
-	      </li>
-	<p>	
-	<li>
-<a href="https://jcb.labri.fr/2022/">	
-Journées de combinatoire de Bordeaux (JCB),	
-	</a>  9 au 11 février 2022
-	      </li>
+	
 	   </ul>
 	<p>
 
