--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@ RECENT Publications
   <ul>
 <li>
 J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
+<a href=" https://arxiv.org/abs/2307.06517	">
+<i>A raising operator formula for Macdonald polynomials</i>
+</a>.
+ArXiv e-prints.	 
+
+	
+<li>
+J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/pdf/2112.07070.pdf">
 <i>Dens, nests, and the Loehr-Warrington conjecture</i>
 </a>.
