--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@ UPCOMING CONFERENCES
 
 </li>
 		      <p>
+			       <li>
+<a href="http://maagc.org/">
+  Mid-Atlantic Algebra and Combinatorics </a>, Dec 1--2,2023
+	<ul>
+
+</li>
+		      <p>
 		      <li>
 <a href="http://www.canadam.ca/">
 	CanaDAM in Winnipeg
