--- a/index.html
+++ b/index.html
@@ -119,8 +119,12 @@ UPCOMING CONFERENCES
 		      <p>
 			       <li>
 <a href="http://maagc.org/">
-  Mid-Atlantic Algebra and Combinatorics </a>, Dec 1--2,2023
-	<ul>
+  Mid-Atlantic Algebra and Combinatorics </a>, Richomnd, Dec 1-2,2023
+
+</li>
+		      <p>
+			      <a href="https://2023.permutationpatterns.com/">
+  Permutation Patterns </a>, Dijon, July 3-9,2023
 
 </li>
 		      <p>
