--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ UPCOMING CONFERENCES
 </li>
 		      <p>
 			       <li>
-<a href="http://maagc.org/">
+<a href="http://www.maagc.info/">
   Mid-Atlantic Algebra and Combinatorics </a>, Richomnd, Dec 1-2,2023
 
 </li>
