--- a/index.html
+++ b/index.html
@@ -116,7 +116,24 @@ UPCOMING CONFERENCES
 	</ul>
 
 </li>
+
+
+	 			       <li>
+<a href="https://math.virginia.edu/ims/workshop-spring-2024/">
+  Quantum structures in Lie Theory </a>, UVA, March 1--3,2024
+</li>
 		      <p>
+
+			      
+	 			       <li>
+<a href="https://math.virginia.edu/random-lie-2024/">
+  Randomness and Lie theoretic structures </a>, UVA, March 4--5,2024
+</li>
+		      <p>
+
+
+
+			      
 			       <li>
 <a href="http://www.maagc.info/">
   Mid-Atlantic Algebra and Combinatorics </a>, Richomnd, Dec 1-2,2023
