--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@ UPCOMING CONFERENCES
 <p>
 	 			       <li>
 <a href="https://math.virginia.edu/ims/workshop-spring-2024/">
-  Quantum structures in Lie Theory </a>, UVA, March 1--3,2024
+  Quantum structures in Lie Theory </a>, Charlottesville at UVA, March 1--3,2024
 </li>
 		      <p>
 
 			      
 	 			       <li>
 <a href="https://math.virginia.edu/random-lie-2024/">
-  Randomness and Lie theoretic structures </a>, UVA, March 4--5,2024
+  Randomness and Lie theoretic structures </a>, Charlottesville at UVA, March 4--5,2024
 </li>
 		      <p>
 
@@ -136,7 +136,7 @@ UPCOMING CONFERENCES
 			      
 			       <li>
 <a href="http://www.maagc.info/">
-  Mid-Atlantic Algebra and Combinatorics </a>, Richomnd, Dec 1-2,2023
+  Mid-Atlantic Algebra and Combinatorics </a>, Richmond at VCU, Dec 1-2,2023
 
 </li>
 		      <p>
@@ -148,23 +148,22 @@ UPCOMING CONFERENCES
 		      <p>
 		      <li>
 <a href="http://www.canadam.ca/">
-	CanaDAM in Winnipeg
-	</a>, June 5–8, 2023
+	CanaDAM
+	</a>, Winnipeg, June 5–8, 2023
 	      </li>
 
 <p>
 	<li>
 <a href="https://sites.google.com/ncsu.edu/selieworkshop2023">
 	13th Southeastern Lie Theory Workshop,
-</a>
-		
+</a> Raleigh at NCSU,	
 	May 12-14, 2023
 </li>
 	<p>
 		<li>
 <a href="https://www.albany.edu/~sdc/AWM21/">
 		Women in Algebra and Combinatorics,
-			</a>
+			</a> SUNY at Albany,
 			April 28-30, 2023.
 		</li>
 		<p>
