--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@ UPCOMING CONFERENCES
 <p>
 	 			       <li>
 <a href="https://math.virginia.edu/ims/workshop-spring-2024/">
-  Quantum structures in Lie Theory </a>, Charlottesville at UVA, March 1--3,2024
+  Quantum structures in Lie Theory </a>, Charlottesville at UVA, March 1--3, 2024
 </li>
 		      <p>
 
 			      
 	 			       <li>
 <a href="https://math.virginia.edu/random-lie-2024/">
-  Randomness and Lie theoretic structures </a>, Charlottesville at UVA, March 4--5,2024
+  Randomness and Lie theoretic structures </a>, Charlottesville at UVA, March 4--5, 2024
 </li>
 		      <p>
 
@@ -136,13 +136,13 @@ UPCOMING CONFERENCES
 			      
 			       <li>
 <a href="http://www.maagc.info/">
-  Mid-Atlantic Algebra and Combinatorics </a>, Richmond at VCU, Dec 1-2,2023
+  Mid-Atlantic Algebra and Combinatorics </a>, Richmond at VCU, Dec 1-2, 2023
 
 </li>
 		      <p>
 			      <li>
 			      <a href="https://2023.permutationpatterns.com/">
-  Permutation Patterns </a>, Dijon, July 3-9,2023
+  Permutation Patterns </a>, Dijon, July 3-9, 2023
 
 </li>
 		      <p>
@@ -164,7 +164,7 @@ UPCOMING CONFERENCES
 <a href="https://www.albany.edu/~sdc/AWM21/">
 		Women in Algebra and Combinatorics,
 			</a> SUNY at Albany,
-			April 28-30, 2023.
+			April 28-30, 2023
 		</li>
 		<p>
 	
