--- a/index.html
+++ b/index.html
@@ -211,7 +211,14 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/pdf/2112.07063.pdf">
 <i>LLT polynomials in the Schiffmann algebra</i>
 </a>.
-ArXiv e-prints.	 	  
+ArXiv e-prints.	 	
+	
+	  <li>
+J. Blasiak, J. Morse and A. Pun,
+<a href="https://arxiv.org/pdf/2007.04952.pdf">
+<i>Demazure crystals and the Schur positivity of Catalan functions</i>
+</a>.  Invent. math. (2024). https://doi.org/10.1007/s00222-024-01237-5
+
 	  
 	  
 	  
@@ -237,12 +244,7 @@ J. Blasiak, J. Morse and G. Seelinger,
 </a>. Adv in Math. 404B (2022) 108421
   
 	  
-  <li>
-J. Blasiak, J. Morse and A. Pun,
-<a href="https://arxiv.org/pdf/2007.04952.pdf">
-<i>Demazure crystals and the Schur positivity of Catalan functions</i>
-</a>.
-ArXiv e-prints.
+
 
 <li> L. Chen, E. Milićević, and J. Morse, 
 <a href="https://arxiv.org/pdf/2008.13765.pdf">
