--- a/blog.html
+++ b/blog.html
@@ -8,15 +8,19 @@
 <h1>Catalanimal Resources</h1>
 <p>Be <b>bold</b> Documents </p>
 <ul>
-<li>Articles</li>
-<li>Examples; <i>italicize</i> LLT's</li>
+<li><a href="https://annapunying.wixsite.com/punying-math/projects-3">Notes with examples</a> in Anna's Web site.</p></li>
+<li>Sage <i>Code</i>  <a href="
+https://github.com/ghseeli/combinatorialpolynomials">
+  Quantum Schubert and Grothendiecks
+</a>
+</li>
 </ul>
 <p>Improve your image by including an image. </p>
 <p><img src="http://www.mygifs.com/CoverImage.gif" alt="A Great HTML Resource"></p>
 <p>Add a link to your favorite <a href="https://www.dummies.com/">Web site</a>.
 Break up your page with a horizontal rule or two. </p>
 <hr>
-<p>Finally, link to <a href="https://annapunying.wixsite.com/punying-math/projects-3">Notes with examples</a> in Anna's Web site.</p>
+<p>Finally, link <a href="https://github.com/morsej123">Backs</a> to my Web site.</p>
 <!-- And add a copyright notice.-->
 <p>© Morse, 2023</p>
 </body>
