--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@ https://github.com/ghseeli/combinatorialpolynomials">
 <p>Add a link to your favorite <a href="https://www.dummies.com/">Web site</a>.
 Break up your page with a horizontal rule or two. </p>
 <hr>
-<p>Finally, link <a href="https://github.com/morsej123">Backs</a> to my Web site.</p>
+<p>Finally, link <a href="https://github.com/morsej123/morsej123.github.io">Back</a> to my Web site.</p>
 <!-- And add a copyright notice.-->
 <p>© Morse, 2023</p>
 </body>
