--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@ UPCOMING CONFERENCES
  <ul>
 	 <li><a href="https://sites.google.com/ncsu.edu/conf-quantum-groups-rep2024/home">
 	 Quantum Groups and Representation Theory</a>,
-	 On the occasion of Kailash Misra’s 70th birthday, North Carolina State University, Raleigh, NC, October 12-15, 2024
+	 North Carolina State University, Raleigh, NC, October 12-15, 2024
+		 <p>
+			 On the occasion of Kailash Misra’s 70th birthday
+		 </p>
 	  </li>
 	
 	      
