--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@ UPCOMING CONFERENCES
 </font>
       <p>
  <ul>
+
+	<li><a href="https://www.albany.edu/~cz954339/2025China/CIM.html">
+		International Workshop on Schubert Calculus, Representation Theory, and Spectral Theory</a>,
+		Chern Institute of Mathematics, Nankai University, Tianjin, China,May 26-30, 2025
+	</li>
+	 
+
+
+	 
+	 
+	 
+	 
 	 <li><a href="https://sites.google.com/ncsu.edu/conf-quantum-groups-rep2024/home">
 	 Quantum Groups and Representation Theory</a>,
 	 North Carolina State University, Raleigh, NC, October 12-15, 2024
@@ -112,6 +124,8 @@ UPCOMING CONFERENCES
  <li>
 <a href="http://fpsac.org/">
   Formal Power Series and Algebraic Combinatorics </a>
+	 <ul>
+		 <a href="https://www.math.sci.hokudai.ac.jp/sympo/fpsac2025/"> Hokkaido University</a>, Sapporo, Japan, July 21-25, 2025
 	<ul>
 	<a href="https://fpsac2024.rub.de/">
 	Bochum, Germany</a>, July 22-26, 2024 
