--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@ UPCOMING CONFERENCES
 		      </h3>
 </font>
       <p>
- <ul>
+ <ul> 
+	 <li>
+<a href="http://fpsac.org/">
+  Formal Power Series and Algebraic Combinatorics </a>
+	 <br>
+		 <a href="https://www.math.sci.hokudai.ac.jp/sympo/fpsac2025/"> Hokkaido University</a>, Sapporo, Japan, July 21-25, 2025
+	 </li>
 
 	<li><a href="https://www.albany.edu/~cz954339/2025China/CIM.html">
 		International Workshop on Schubert Calculus, Representation Theory, and Spectral Theory</a>
@@ -119,9 +125,6 @@ UPCOMING CONFERENCES
  <li>
 <a href="http://fpsac.org/">
   Formal Power Series and Algebraic Combinatorics </a>
-	 <ul>
-		 <a href="https://www.math.sci.hokudai.ac.jp/sympo/fpsac2025/"> Hokkaido University</a>, Sapporo, Japan, July 21-25, 2025
-	 </ul>
 	 <ul>
 	<a href="https://fpsac2024.rub.de/">
 	Bochum, Germany</a>, July 22-26, 2024 
@@ -150,15 +153,13 @@ UPCOMING CONFERENCES
 			       <li>
 <a href="http://www.maagc.info/">
   Mid-Atlantic Algebra and Combinatorics </a>, Richmond at VCU, Dec 1-2, 2023
-
 </li>
 		
 			      <li>
 			      <a href="https://2023.permutationpatterns.com/">
   Permutation Patterns </a>, Dijon, July 3-9, 2023
-
 </li>
-		      <p>
+		  
 		 
 <a href="http://www.canadam.ca/">
 	CanaDAM
@@ -185,8 +186,6 @@ UPCOMING CONFERENCES
 	<p>
 
 	
-	      <p>
-
 	
 	
 </TD>
