--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@ UPCOMING CONFERENCES
  <li>
 <a href="http://fpsac.org/">
   Formal Power Series and Algebraic Combinatorics </a>
-	 <ul>
+	 <br>
 	<a href="https://fpsac2024.rub.de/">
 	Bochum, Germany</a>, July 22-26, 2024 
-	</ul>
+	
 	
 
 </li>
@@ -215,7 +215,7 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/pdf/2112.07070.pdf">
 <i>Dens, nests, and the Loehr-Warrington conjecture</i>
 </a>.
-ArXiv e-prints.	 	
+ArXiv e-prints.	
 	  
 	  
 <li>
@@ -223,7 +223,8 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/pdf/2112.07063.pdf">
 <i>LLT polynomials in the Schiffmann algebra</i>
 </a>.
-ArXiv e-prints.	 	
+Journal für die reine und angewandte Mathematik (Crelles
+Journal), Volume 2024, Issue 811 (2024).	
 	
 	  <li>
 J. Blasiak, J. Morse and A. Pun,
