--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@ UPCOMING CONFERENCES
 	 <br>
 		 <a href="https://www.math.sci.hokudai.ac.jp/sympo/fpsac2025/"> Hokkaido University</a>, Sapporo, Japan, July 21-25, 2025
 	 </li>
-
+<li><a href="https://qtcombinatoricsincortona.ulb.be/">
+		qt-Combinatorics in Algebra, Geometry and Topology</a>
+		<br>
+		 Cortona, Italy, June 9-13, 2025
+	</li>
+	  
+	 
 	<li><a href="https://www.albany.edu/~cz954339/2025China/CIM.html">
 		International Workshop on Schubert Calculus, Representation Theory, and Spectral Theory</a>
 		<br>
