--- a/index.html
+++ b/index.html
@@ -207,12 +207,7 @@ RECENT Publications
   <TR ALIGN="left">
       <TH>
   <ul>
-<li>
-J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
-<a href=" https://arxiv.org/abs/2307.06517	">
-<i>A raising operator formula for Macdonald polynomials</i>
-</a>.
-ArXiv e-prints.	 
+	 
 
 	
 <li>
@@ -220,8 +215,14 @@ J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
 <a href="https://arxiv.org/pdf/2112.07070.pdf">
 <i>Dens, nests, and the Loehr-Warrington conjecture</i>
 </a>.
-ArXiv e-prints.	
-	  
+	J Amer Math Soc (2025).
+
+<li>
+J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
+<a href=" https://arxiv.org/abs/2307.06517	">
+<i>A raising operator formula for Macdonald polynomials</i>
+</a>.
+Forum of Math, Sigma (2025).	  
 	  
 <li>
 J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
