--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@ UPCOMING CONFERENCES
 	 <br>
 		 <a href="https://www.math.sci.hokudai.ac.jp/sympo/fpsac2025/"> Hokkaido University</a>, Sapporo, Japan, July 21-25, 2025
 	 </li>
+<li><a href="https://sites.google.com/view/coinvariantrings2025/">	New perspectives of coinvariant rings     </a>	
+	<br>
+Research Institute for
+Mathematical Sciences,
+Kyoto University,
+	July 14--18, 2025
+</li>
+	 
 <li><a href="https://qtcombinatoricsincortona.ulb.be/">
 		qt-Combinatorics in Algebra, Geometry and Topology</a>
 		<br>
