--- a/index.html
+++ b/index.html
@@ -215,8 +215,16 @@ RECENT Publications
   <TR ALIGN="left">
       <TH>
   <ul>
-	 
+<li>
+J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
+<a href="https://arxiv.org/abs/2506.09015">
+<i>Flagged LLT polynomials, nonsymmetric plethysm, and nonsymmetric Macdonald polynomials</i>
+</a> (2025).
 
+<li>	 
+
+
+	  
 	
 <li>
 J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
