--- a/index.html
+++ b/index.html
@@ -217,11 +217,10 @@ RECENT Publications
   <ul>
 <li>
 J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
-<a href="https://arxiv.org/abs/2506.09015">
+<a href="https://arxiv.org/pdf/2506.09015">
 <i>Flagged LLT polynomials, nonsymmetric plethysm, and nonsymmetric Macdonald polynomials</i>
 </a> (2025).
 
-<li>	 
 
 
 	  
