--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
 <div class="section">
   <h2>Research</h2>
   Algebraic Combinatorics
-  <p>
-    <a href="https://arxiv.org/search/?query=Morse%2C+Jennifer&searchtype=author&abstracts=show&order=-announced_date_first&size=50">Publications</a>
-  </p>
+  
   <p>
     Generous support from: <br>
     <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2154281&HistoricalAwards=false">National Science Foundation</a><br>
@@ -176,6 +174,9 @@
       <a href="https://arxiv.org/pdf/1804.03701.pdf"><i>Catalan functions and k-Schur positivity</i></a>, J Amer Math Soc, 32 (2019) 921–963.</li>
     <li>J. Morse and R. Kaliszewski,
       <a href="https://arxiv.org/pdf/1710.00801.pdf"><i>Colorful combinatorics of Macdonald polynomials</i></a>, European J of Comb, 81 (2019), 354–377.</li>
+ <li> Others
+    <a href="https://arxiv.org/search/?query=Morse%2C+Jennifer&searchtype=author&abstracts=show&order=-announced_date_first&size=50">Publications</a>
+  </li>
   </ul>
 </div>
 
