--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <!-- Section 3: Upcoming Conferences -->
 <div class="section">
-  <h2>Upcoming Conferences</h2>
+  <h2>Recent and Upcoming Conferences</h2>
   <ul id="conference-list">
     <li>
       <a href="http://fpsac.org/">Formal Power Series and Algebraic Combinatorics</a><br>
