--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <a href="https://arxiv.org/pdf/1804.03701.pdf"><i>Catalan functions and k-Schur positivity</i></a>, J Amer Math Soc, 32 (2019) 921–963.</li>
     <li>J. Morse and R. Kaliszewski,
       <a href="https://arxiv.org/pdf/1710.00801.pdf"><i>Colorful combinatorics of Macdonald polynomials</i></a>, European J of Comb, 81 (2019), 354–377.</li>
- <li> Others
+ <li> Other
     <a href="https://arxiv.org/search/?query=Morse%2C+Jennifer&searchtype=author&abstracts=show&order=-announced_date_first&size=50">Publications</a>
   </li>
   </ul>
