--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
   <h2>Recent Publications</h2>
   <ul>
     <li>J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
+      <a href="https://arxiv.org/pdf/2509.24040"><i>The nonsymmetric shuffle theorem</i></a> (2025).</li>
+    <li>J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
       <a href="https://arxiv.org/pdf/2506.09015"><i>Flagged LLT polynomials, nonsymmetric plethysm, and nonsymmetric Macdonald polynomials</i></a> (2025).</li>
     <li>J. Blasiak, M. Haiman, J. Morse, A. Pun, and G. Seelinger,
       <a href="https://arxiv.org/pdf/2112.07070.pdf"><i>Dens, nests, and the Loehr-Warrington conjecture</i></a>, J Amer Math Soc (2025).</li>
