Add upcoming conferences to index.html
Added upcoming conferences to the conference list.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,18 @@
   <h2>Recent and Upcoming Conferences</h2>
   <ul id="conference-list">
     <li>
+      <a href="https://tsimf.tsinghua.edu.cn/programs/workshops/W2026.htm">Representation Theory and Schubert Calculus</a><br>
+      TSIMF, Sanya, China, January 4-8, 2027.
+    </li>
+ <li>
+      <a href="https://tsimf.tsinghua.edu.cn/programs/workshops/W2026.htm">International Congress of Mathematicians</a><br>
+      Philadelphia, PA, July 23-30, 2026
+    </li>    
+   <li>
+      <a href="http://fpsac.org/">Formal Power Series and Algebraic Combinatorics</a><br>
+      <a href="https://sites.math.washington.edu/fpsac2026/">University of Washington</a>, Seattle,  July 13–17, 2026 
+    </li>
+    <li>
       <a href="http://fpsac.org/">Formal Power Series and Algebraic Combinatorics</a><br>
       <a href="https://www.math.sci.hokudai.ac.jp/sympo/fpsac2025/">Hokkaido University</a>, Sapporo, Japan, July 21–25, 2025
     </li>
