Update link for International Congress of Mathematicians

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       TSIMF, Sanya, China, January 4-8, 2027.
     </li>
  <li>
-      <a href="https://tsimf.tsinghua.edu.cn/programs/workshops/W2026.htm">International Congress of Mathematicians</a><br>
+      <a href="https://www.mathunion.org/icm/icm-2026">International Congress of Mathematicians</a><br>
       Philadelphia, PA, July 23-30, 2026
     </li>    
    <li>
